updated events section, removed blog section,fixed the horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,6 @@
 body{
     font-family: 'Poppins';
     background-color: white;
+    overflow-x: hidden;
 }
 
